# lfpl-plus

./: README.md  dune-project  lfpl.opam
dune.lock/: lock.dune
examples/: append.lfpl  append_elision.lfpl  closure.lfpl  filter.lfpl  id.lfpl  invert_tree.lfpl  or_list.lfpl  stack_simple.lfpl
lib/: ast.ml  ast.mli  context.ml  context.mli  dune  elab.ml  elab.mli  interpreter.ml  lfpl_formatter.ml  lfpl_formatter.mli  lfpl_lib.ml  parser.ml  parser.mli  test_helpers.ml  test_helpers.mli  typechecker.ml  typechecker.mli
test/: dune  test_parser.ml  test_typechecker.ml
